--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:b6G0KI7MuBvsF87OlM+bL7xErIKMlSM4LX2/ZP1LiCk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=api
+DB_DATABASE=reservas_db
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -64,3 +64,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SWAGGER_GENERATE_ALWAYS=true
+SWAGGER_BASE_PATH=/api
